# trivia-fastapi-app-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py  setup.cfg
alembic/: env.py
alembic/versions/: 339310376c31_.py  722c53224b30_.py
app/: main.py
app/api/: api.py
app/api/endpoints/: ping.py  question.py
app/config/: settings.py
app/database/: base.py  db.py
app/models/: answers.py  category.py  questions.py
app/routes/: question.py
